# off-kilter

./: .gitignore  Cargo.toml  README.md  create_test_token.py  docker-compose.dev.yml  docker-compose.services.yml  docker-compose.yml  justfile  main.py  pyproject.toml  test_auth.py
.kiro/specs/kilter-board-app/: requirements.md  tasks.md
backend/: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  boulder_problem_design.md  optimization_analysis.md  test_auth.py  test_duplicate_validation.py  test_jwt.rs  test_user_api.py
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/database/: connection.rs  migrations.rs
backend/src/handlers/: auth.rs  mod.rs  problems.rs  search.rs  user.rs  users.rs  votes.rs
backend/src/models/: boulder_problem.rs  mod.rs  problem_set.rs  user.rs  vote.rs
backend/src/repositories/: user.rs
backend/src/tests/: mod.rs  property_tests.rs  unit_tests.rs
backend/tests/: integration_test.rs
docs/kiro/: design.md  tasks.md
docs/meta/: README.md  dev-stack.md  getting-started.md
mobile/: jest.config.js  package-lock.json  package.json  tsconfig.json
mobile/__tests__/: App.test.tsx
mobile/android/: build.gradle  settings.gradle
mobile/android/app/: build.gradle
mobile/src/: App.tsx
mobile/src/types/: index.ts
