[workspace]
members = [
    "backend",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0.50"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"