[package]
name = "kilter-board-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.50"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
dotenvy = "0.15"
url = "2.4"
jsonwebtoken = "9.2"
base64 = "0.21"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"